k8s/home/media/plex.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plex
  name: plex
  namespace: media
spec:
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: plexinc/pms-docker
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: plex-db-storage
              mountPath: /config
            - name: plex-transcode-storage
              mountPath: /transcode
            - name: plex-media
              mountPath: /data
          ports:
            - containerPort: 32400
              name: plex
              protocol: TCP
            - containerPort: 1900
              name: dlna-udp
              protocol: UDP
            - containerPort: 32469
              name: dlna-tcp
              protocol: TCP
            - containerPort: 8324
              name: roku
              protocol: TCP
            - containerPort: 32410
              name: gdm-1
              protocol: UDP
            - containerPort: 32412
              name: gdm-2
              protocol: UDP
            - containerPort: 32413
              name: gdm-3
              protocol: UDP
            - containerPort: 32414
              name: gdm-4
              protocol: UDP
      volumes:
        - name: plex-db-storage
          persistentVolumeClaim:
            claimName: plex-db
        - name: plex-transcode-storage
          persistentVolumeClaim:
            claimName: plex-transcode
        - name: plex-media
          nfs:
            server: avalanche.home.analogrelay.net
            path: /mnt/data/shares/public/media

---
apiVersion: v1
kind: Service
metadata:
  name: plex-svc
  namespace: media
spec:
  type: ClusterIP
  ports:
  - name: plex
    port: 80
    targetPort: plex
    protocol: TCP
  selector:
    app: plex

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  rules:
  - host: plex.home.analogrelay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-svc
            port:
              number: 80
  tls:
    - hosts:
        - plex.home.analogrelay.net
      secretName: plex-ingress-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress-ts
  namespace: media
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: plex-svc
      port:
        number: 80
  tls:
    - hosts:
        - plex
